syntax = "proto3";
option csharp_namespace = "DomoCore.Shared.GrpcProtos";

package output;

service Output{
	rpc SetOutputs (OutputValue) returns (OutputReply);
	rpc KeepOutputAlive (KeepOutputAliveMessage) returns (OutputReply);
}


message KeepOutputAliveMessage{
	string receiver = 1;
}

message OutputValue{
	uint32 value = 1;
}

message OutputReply{
	bool done = 1;
}